--- a/System_eng_Part4.ipynb
+++ b/System_eng_Part4.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "A100",
       "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/System_eng_Part4.ipynb",
-      "authorship_tag": "ABX9TyNBCBgUrMA1DMkybZm7radM",
+      "authorship_tag": "ABX9TyPC8xyx69ulZQ0jBysNmJZM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,22 +35,10 @@
         "pip install langchain openai pypdf chroma streamlit langchain_openai langchain_community langchain transformers bitsandbytes accelerate torch faiss-gpu faiss-cpu langchain_chroma langchain_experimental"
       ],
       "metadata": {
-        "id": "pRhoGD70xtE4",
-        "outputId": "29f8a393-9120-45d3-ba88-88bf371f2817",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "pRhoGD70xtE4"
       },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Successfully installed accelerate-0.31.0 asgiref-3.8.1 backoff-2.2.1 bcrypt-4.1.3 bitsandbytes-0.43.1 chroma-0.2.0 chroma-hnswlib-0.7.3 chromadb-0.5.3 coloredlogs-15.0.1 dataclasses-json-0.6.7 deprecated-1.2.14 dnspython-2.6.1 email_validator-2.2.0 faiss-cpu-1.8.0.post1 faiss-gpu-1.7.2 fastapi-0.111.0 fastapi-cli-0.0.4 gitdb-4.0.11 gitpython-3.1.43 h11-0.14.0 httpcore-1.0.5 httptools-0.6.1 httpx-0.27.0 humanfriendly-10.0 importlib-metadata-7.1.0 jsonpatch-1.33 jsonpointer-3.0.0 kubernetes-30.1.0 langchain-0.2.5 langchain-core-0.2.9 langchain-text-splitters-0.2.1 langchain_chroma-0.1.1 langchain_community-0.2.5 langchain_experimental-0.0.61 langchain_openai-0.1.9 langsmith-0.1.81 marshmallow-3.21.3 mmh3-4.1.0 monotonic-1.6 mypy-extensions-1.0.0 nvidia-cublas-cu12-12.1.3.1 nvidia-cuda-cupti-cu12-12.1.105 nvidia-cuda-nvrtc-cu12-12.1.105 nvidia-cuda-runtime-cu12-12.1.105 nvidia-cudnn-cu12-8.9.2.26 nvidia-cufft-cu12-11.0.2.54 nvidia-curand-cu12-10.3.2.106 nvidia-cusolver-cu12-11.4.5.107 nvidia-cusparse-cu12-12.1.0.106 nvidia-nccl-cu12-2.20.5 nvidia-nvjitlink-cu12-12.5.40 nvidia-nvtx-cu12-12.1.105 onnxruntime-1.18.0 openai-1.35.3 opentelemetry-api-1.25.0 opentelemetry-exporter-otlp-proto-common-1.25.0 opentelemetry-exporter-otlp-proto-grpc-1.25.0 opentelemetry-instrumentation-0.46b0 opentelemetry-instrumentation-asgi-0.46b0 opentelemetry-instrumentation-fastapi-0.46b0 opentelemetry-proto-1.25.0 opentelemetry-sdk-1.25.0 opentelemetry-semantic-conventions-0.46b0 opentelemetry-util-http-0.46b0 orjson-3.10.5 overrides-7.7.0 posthog-3.5.0 pydeck-0.9.1 pypdf-4.2.0 pypika-0.48.9 python-dotenv-1.0.1 python-multipart-0.0.9 smmap-5.0.1 starlette-0.37.2 streamlit-1.36.0 tiktoken-0.7.0 typing-inspect-0.9.0 ujson-5.10.0 uvicorn-0.30.1 uvloop-0.19.0 watchdog-4.0.1 watchfiles-0.22.0 websockets-12.0\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -62,25 +50,10 @@
         "login(token = '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')"
       ],
       "metadata": {
-        "id": "9khH96Vv2qLW",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "27537198-540c-407f-ab65-3662e37d153b"
+        "id": "9khH96Vv2qLW"
       },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "The token has not been saved to the git credentials helper. Pass `add_to_git_credential=True` in this function directly or `--add-to-git-credential` if using via `huggingface-cli` if you want to set the git credential as well.\n",
-            "Token is valid (permission: read).\n",
-            "Your token has been saved to /root/.cache/huggingface/token\n",
-            "Login successful\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -280,11 +253,8 @@
         "                        prompt_input, metadata_info = rag_with_multiple_pdfs(prompt, st.session_state.messages)\n",
         "                        response = generate_llama3_response(prompt_input, tokenizer, model)\n",
         "                        placeholder = st.empty()\n",
-        "                        full_response = ''\n",
-        "                        for item in response:\n",
-        "                            full_response += item\n",
+        "                        full_response = response\n",
         "                        placeholder.markdown(full_response)\n",
-        "                        #placeholder.markdown(metadata_info)\n",
         "                        message = {\"role\": \"assistant\", \"content\": f\"{full_response}\\n\\nMetadata Bilgileri:\\n{metadata_info}\"}\n",
         "                        st.session_state.messages.append(message)\n",
         "                    except Exception as e:\n",
@@ -295,12 +265,12 @@
       ],
       "metadata": {
         "id": "fy5JU_MNsJef",
-        "outputId": "9637b842-f13b-47c5-fcf8-396f5d68efa4",
+        "outputId": "9dae991a-5f73-467e-d498-d3950f722d7a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -320,7 +290,7 @@
       ],
       "metadata": {
         "id": "5nrpXTICsMC0",
-        "outputId": "03761bbe-7c57-41b3-a483-dd198c7f5cc4",
+        "outputId": "5e9402f3-4da4-4065-985e-6d97ae85ecfd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -339,30 +309,226 @@
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No license field.\n",
             "\u001b[0m\n",
             "\u001b[K\u001b[?25h+ localtunnel@2.0.2\n",
-            "updated 1 package and audited 36 packages in 0.397s\n",
+            "updated 1 package and audited 36 packages in 0.48s\n",
             "\n",
             "3 packages are looking for funding\n",
             "  run `npm fund` for details\n",
             "\n",
             "found 2 \u001b[93mmoderate\u001b[0m severity vulnerabilities\n",
             "  run `npm audit fix` to fix them, or `npm audit` for details\n",
-            "\u001b[K\u001b[?25hnpx: installed 22 in 1.724s\n",
-            "your url is: https://slimy-tools-smile.loca.lt\n"
+            "\u001b[K\u001b[?25hnpx: installed 22 in 2.92s\n",
+            "your url is: https://lazy-ants-see.loca.lt\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "%%writefile app_v4.py\n",
+        "import streamlit as st\n",
+        "from langchain.document_loaders.pdf import PyPDFDirectoryLoader\n",
+        "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
+        "from langchain.schema.document import Document\n",
+        "from langchain.vectorstores.chroma import Chroma\n",
+        "from langchain.embeddings.huggingface import HuggingFaceEmbeddings\n",
+        "from transformers import AutoTokenizer, AutoModelForCausalLM, BitsAndBytesConfig\n",
+        "import torch\n",
+        "import os\n",
+        "import shutil\n",
+        "from langchain_core.documents import Document\n",
+        "from langchain_experimental.text_splitter import SemanticChunker\n",
+        "from transformers import AutoTokenizer, AutoModelForCausalLM, BitsAndBytesConfig\n",
+        "import torch\n",
+        "\n",
+        "\n",
+        "# Set up Streamlit page configuration\n",
+        "st.set_page_config(page_title=\"🦙💬 Sistem Mühendisliği Giriş Chatbot\")\n",
+        "\n",
+        "# Constants\n",
+        "DATA_PATH = \"/content/drive/MyDrive/data\"  # PDF dosyalarının bulunduğu dizin\n",
+        "CHROMA_PATH = \"chroma\"  # Chroma veritabanının saklanacağı dizin\n",
+        "\n",
+        "# Initialize Embeddings\n",
+        "def initialize_embeddings():\n",
+        "    return HuggingFaceEmbeddings(\n",
+        "        model_name=\"sentence-transformers/all-MiniLM-L6-v2\"\n",
+        "    )\n",
+        "\n",
+        "embeddings = initialize_embeddings()\n",
+        "\n",
+        "# Load and Split Documents\n",
+        "def load_and_split_documents(data_path, embeddings):\n",
+        "    document_loader = PyPDFDirectoryLoader(data_path)\n",
+        "    raw_documents = document_loader.load()\n",
+        "    text_splitter = RecursiveCharacterTextSplitter(\n",
+        "        chunk_size=800,\n",
+        "        chunk_overlap=80,\n",
+        "        length_function=len\n",
+        "    )\n",
+        "    return text_splitter.split_documents(raw_documents)\n",
+        "\n",
+        "# Create Custom Documents\n",
+        "def create_custom_documents(splitted_documents):\n",
+        "    custom_documents = []\n",
+        "    for i, raw_doc in enumerate(splitted_documents):\n",
+        "        new_doc = Document(\n",
+        "                page_content=raw_doc.page_content,\n",
+        "                metadata = {\n",
+        "                    \"source\": raw_doc.metadata.get(\"source\", \"Unknown Source\"),\n",
+        "                    \"title\": raw_doc.metadata.get(\"title\", \"No Title\"),\n",
+        "                    \"description\": raw_doc.metadata.get(\"description\", \"No Description\"),\n",
+        "                    \"language\": raw_doc.metadata.get(\"language\", \"Unknown Language\"),\n",
+        "                    \"doc_id\": i\n",
+        "                }\n",
+        "        )\n",
+        "        custom_documents.append(new_doc)\n",
+        "    return custom_documents\n",
+        "\n",
+        "# Initialize Vectorstore and Retriever\n",
+        "def initialize_vectorstore(custom_documents, embeddings, persist_directory):\n",
+        "    try:\n",
+        "        vectorstore = Chroma.from_documents(\n",
+        "            custom_documents,\n",
+        "            embeddings,\n",
+        "            persist_directory=persist_directory\n",
+        "        )\n",
+        "        return vectorstore.as_retriever(\n",
+        "            search_type=\"mmr\",\n",
+        "            search_kwargs={'k': 4, 'lambda_mult': 0.25}\n",
+        "        )\n",
+        "    except Exception as e:\n",
+        "        print(f\"Error initializing vectorstore: {e}\")\n",
+        "        raise e\n",
+        "\n",
+        "# Retrieve Relevant Documents\n",
+        "def retrieve_relevant_documents(retriever, prompt):\n",
+        "    return retriever.get_relevant_documents(prompt)\n",
+        "\n",
+        "# Generate Final Prompt\n",
+        "def generate_final_prompt(prompt, context_data, chat_history, relevant_documents):\n",
+        "    history_prompt = \"\\n\".join([f\"{msg['role']}: {msg['content']}\" for msg in chat_history])\n",
+        "    metadata_info = \"\\n\".join([f\"Belge {doc.metadata['doc_id']} - Başlık: {doc.metadata['title']}, Kaynak: {doc.metadata['source']}\" for doc in relevant_documents])\n",
+        "    return f\"\"\"\n",
+        "    Önceki konuşmalarımız:\n",
+        "    {history_prompt}\n",
+        "\n",
+        "    Şöyle bir sorum var: {prompt}\n",
+        "    Bu soruyu yanıtlamak için elimizde şu bilgiler var: {context_data}\n",
+        "    Belge Bilgileri: {metadata_info}\n",
+        "    Bu sorunun yanıtını vermek için yalnızca sana burada verdiğim eldeki bilgileri kullan. Bunların dışına asla çıkma.\n",
+        "    \"\"\"\n",
+        "\n",
+        "# RAG with Multiple PDFs\n",
+        "def rag_with_multiple_pdfs(prompt, chat_history):\n",
+        "    splitted_documents = load_and_split_documents(DATA_PATH, embeddings)\n",
+        "    custom_documents = create_custom_documents(splitted_documents)\n",
+        "    retriever = initialize_vectorstore(custom_documents, embeddings, CHROMA_PATH)\n",
+        "    relevant_documents = retrieve_relevant_documents(retriever, prompt)\n",
+        "\n",
+        "    context_data = \" \".join([doc.page_content for doc in relevant_documents])\n",
+        "    return generate_final_prompt(prompt, context_data, chat_history, relevant_documents)\n",
+        "\n",
+        "# Initialize Model\n",
+        "def initialize_model():\n",
+        "    model_id = \"meta-llama/Meta-Llama-3-8B-Instruct\"\n",
+        "    bnb_config = BitsAndBytesConfig(\n",
+        "        load_in_4bit=True, bnb_4bit_use_double_quant=True, bnb_4bit_quant_type=\"nf4\", bnb_4bit_compute_dtype=torch.bfloat16\n",
+        "    )\n",
+        "    tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
+        "    model = AutoModelForCausalLM.from_pretrained(\n",
+        "        model_id,\n",
+        "        torch_dtype=torch.bfloat16,\n",
+        "        device_map=\"auto\",\n",
+        "        quantization_config=bnb_config\n",
+        "    )\n",
+        "    return tokenizer, model\n",
+        "\n",
+        "tokenizer, model = initialize_model()\n",
+        "\n",
+        "# Generate LLaMA3 Response\n",
+        "def generate_llama3_response(prompt_input, tokenizer, model):\n",
+        "    SYS_PROMPT = \"\"\"You are an assistant for answering questions.\n",
+        "    You are given the extracted parts of a long document and a question. Provide a conversational answer.\n",
+        "    If you don't know the answer, just say \"I do not know.\" Don't make up an answer.\"\"\"\n",
+        "\n",
+        "    messages = [{\"role\":\"system\",\"content\":SYS_PROMPT},{\"role\":\"user\",\"content\":prompt_input}]\n",
+        "\n",
+        "    input_ids = tokenizer.apply_chat_template(\n",
+        "        messages,\n",
+        "        add_generation_prompt=True,\n",
+        "        return_tensors=\"pt\"\n",
+        "    ).to(model.device)\n",
+        "\n",
+        "    outputs = model.generate(\n",
+        "        input_ids,\n",
+        "        max_new_tokens=1024,\n",
+        "        eos_token_id=tokenizer.eos_token_id,\n",
+        "        do_sample=True,\n",
+        "        temperature=0.6,\n",
+        "        top_p=0.9,\n",
+        "    )\n",
+        "\n",
+        "    response = outputs[0][input_ids.shape[-1]:]\n",
+        "    return tokenizer.decode(response, skip_special_tokens=True)\n",
+        "\n",
+        "# Streamlit App Setup\n",
+        "def setup_streamlit():\n",
+        "    with st.sidebar:\n",
+        "        st.title('🦙💬 Sistem Mühendisliği Giriş')\n",
+        "        st.subheader('Models and parameters')\n",
+        "        temperature = st.sidebar.slider('temperature', min_value=0.01, max_value=5.0, value=0.1, step=0.01)\n",
+        "        top_p = st.sidebar.slider('top_p', min_value=0.01, max_value=1.0, value=0.9, step=0.01)\n",
+        "        max_length = st.sidebar.slider('max_length', min_value=32, max_value=128, value=120, step=8)\n",
+        "        st.markdown('📖 Learn how to build this app in this [blog](https://blog.streamlit.io/how-to-build-a-llama-2-chatbot/)!')\n",
+        "\n",
+        "    if \"messages\" not in st.session_state.keys():\n",
+        "        st.session_state.messages = [{\"role\": \"assistant\", \"content\": \"How may I assist you today?\"}]\n",
+        "\n",
+        "    for message in st.session_state.messages:\n",
+        "        with st.chat_message(message[\"role\"]):\n",
+        "            st.write(message[\"content\"])\n",
+        "\n",
+        "def clear_chat_history():\n",
+        "    st.session_state.messages = [{\"role\": \"assistant\", \"content\": \"How may I assist you today?\"}]\n",
+        "st.sidebar.button('Clear Chat History', on_click=clear_chat_history)\n",
+        "\n",
+        "# Main Function\n",
+        "def main():\n",
+        "    setup_streamlit()\n",
+        "\n",
+        "    if prompt := st.chat_input(\"Mesajınızı Giriniz:\"):\n",
+        "        st.session_state.messages.append({\"role\": \"user\", \"content\": prompt})\n",
+        "        with st.chat_message(\"user\"):\n",
+        "            st.write(prompt)\n",
+        "\n",
+        "        if st.session_state.messages[-1][\"role\"] != \"assistant\":\n",
+        "            with st.chat_message(\"assistant\"):\n",
+        "                with st.spinner(\"Thinking...\"):\n",
+        "                    try:\n",
+        "                        prompt_input = rag_with_multiple_pdfs(prompt, st.session_state.messages)\n",
+        "                        response = generate_llama3_response(prompt_input, tokenizer, model)\n",
+        "                        placeholder = st.empty()\n",
+        "                        full_response = ''\n",
+        "                        for item in response:\n",
+        "                            full_response += item\n",
+        "                        placeholder.markdown(full_response)\n",
+        "                        message = {\"role\": \"assistant\", \"content\": full_response}\n",
+        "                        st.session_state.messages.append(message)\n",
+        "                    except Exception as e:\n",
+        "                        st.error(f\"An error occurred: {e}\")\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()\n"
+      ],
       "metadata": {
         "id": "dlp8OgzRdBol",
-        "outputId": "732b52e3-2db0-4b58-88c4-18bdc82b7aa7",
+        "outputId": "f819d68e-b1c9-4b49-eeaf-c6d14aa86053",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
