--- a/System_eng_Part4.ipynb
+++ b/System_eng_Part4.ipynb
@@ -4,9 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "L4",
+      "gpuType": "A100",
       "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/System_eng_Part4.ipynb",
-      "authorship_tag": "ABX9TyPSRWqK1rIJNoXOOmftR1PQ",
+      "authorship_tag": "ABX9TyOUNiu/Klm4UKE6t+g/uE+e",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,25 +72,10 @@
         "login(token = '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')"
       ],
       "metadata": {
-        "id": "9khH96Vv2qLW",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "874e2869-487b-428a-c6ac-8d52d2d1a1fa"
+        "id": "9khH96Vv2qLW"
       },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "The token has not been saved to the git credentials helper. Pass `add_to_git_credential=True` in this function directly or `--add-to-git-credential` if using via `huggingface-cli` if you want to set the git credential as well.\n",
-            "Token is valid (permission: read).\n",
-            "Your token has been saved to /root/.cache/huggingface/token\n",
-            "Login successful\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -302,7 +287,7 @@
       ],
       "metadata": {
         "id": "fy5JU_MNsJef",
-        "outputId": "5196b3a1-7a4b-4fd1-eb42-8b52d34e53ca",
+        "outputId": "212a548c-d10f-4e54-c159-1370bbb05bef",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -313,7 +298,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Writing app_v4.py\n"
+            "Writing app_v3.py\n"
           ]
         }
       ]
@@ -605,6 +590,10 @@
         "\n",
         "    \"affirmative_sentencing_simpler\": \"Use positive, action-oriented language.\\nExample: Replace \\\"Don't forget to create a table from the text.\\\" with \\\"Remember to  create a table from the text.\\\"\",\n",
         "\n",
+        "    \"deeper_understanding\" : \"When you need clarity or a deeper understanding of a topic, idea, or any piece of information, utilize the following prompts: - Explain [insert specific topic] in simple terms. - Explain to me like I'm 11 years old. - Explain to me as if I'm a beginner in [field]. - Explain to me as if I'm an expert in [field]. - -Write the [essay/text/paragraph] using simple English like you're explaining something to a 5-year-old.\",\n",
+        "\n",
+        "    \"deeper_understanding_simpler\": \"Explain to me as if I’m a beginner in System Engineering. Example: Change \\\"Explain system architecture.\\\" to \\\"Explain system architecture to beginners.\\\"\",\n",
+        "\n",
         "    \"audience_integration\": \"Integrate the intended audience in the original prompt.\\n\\nHere are examples demonstrating how to apply this principle:\\n\\n[original]\\nDescribe the function of the heart in the human body.\\n[improved]\\nDescribe the function of the heart in the human body. Assume your audience is a first-year medical student.\\n\\n[original]\\nWrite the opening paragraph of a fantasy story.\\n[improved]\\nWrite the opening paragraph of a middle-grade fantasy story, capturing the attention of a young reader around 11 years old.\\n\\n========\\nBased on this approach, refine the following prompt.\\n\\n[original]\\n{prompt}\\n[improved]\\n\",\n",
         "\n",
         "    \"audience_integration_simpler\": \"Specify the audience in the prompt.\\nExample: Change \\\"Explain how a film camera works.\\\" to \\\"Explain how a film camera works to beginners.\\\"\",\n",
@@ -763,7 +752,7 @@
         "    system_message += '\\n' + templates[\"lang_eng\"]\n",
         "\n",
         "\n",
-        "    skills = [\"fewshot_prompting\"]\n",
+        "    skills = [\"audience_integration\",\"deeper_understanding\",\"task_decomposition\",\"fewshot_prompting\"]\n",
         "    integrated_templates = \"[Prompt Engineering Techniques to Apply]\\n\"\n",
         "\n",
         "    for idx, skill in enumerate(skills):\n",
@@ -876,9 +865,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cCxJ3dUyS0e7",
-        "outputId": "cfadf93f-76a0-40e0-9abf-c5d913023b5f"
+        "outputId": "2e5fbc72-b035-4543-e1e2-cd8f9d113567"
       },
-      "execution_count": 18,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -901,9 +890,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sNydXxQ2S8Wz",
-        "outputId": "94d35f1a-73fe-48fc-f672-3fa64b920bbd"
+        "outputId": "1af0a7c2-f4ef-42f8-e0f7-8d6df4b6f856"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -917,16 +906,15 @@
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No license field.\n",
             "\u001b[0m\n",
             "\u001b[K\u001b[?25h+ localtunnel@2.0.2\n",
-            "updated 1 package and audited 36 packages in 0.451s\n",
+            "updated 1 package and audited 36 packages in 0.436s\n",
             "\n",
             "3 packages are looking for funding\n",
             "  run `npm fund` for details\n",
             "\n",
             "found 2 \u001b[93mmoderate\u001b[0m severity vulnerabilities\n",
             "  run `npm audit fix` to fix them, or `npm audit` for details\n",
-            "\u001b[K\u001b[?25hnpx: installed 22 in 1.045s\n",
-            "your url is: https://wild-ghosts-dig.loca.lt\n",
-            "^C\n"
+            "\u001b[K\u001b[?25hnpx: installed 22 in 1.28s\n",
+            "your url is: https://flat-comics-boil.loca.lt\n"
           ]
         }
       ]
