--- a/System_eng_Part4.ipynb
+++ b/System_eng_Part4.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "A100",
       "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/System_eng_Part4.ipynb",
-      "authorship_tag": "ABX9TyOUNiu/Klm4UKE6t+g/uE+e",
+      "authorship_tag": "ABX9TyM49R4vDC73xMoCHNTOd3xN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -752,7 +752,7 @@
         "    system_message += '\\n' + templates[\"lang_eng\"]\n",
         "\n",
         "\n",
-        "    skills = [\"audience_integration\",\"deeper_understanding\",\"task_decomposition\",\"fewshot_prompting\"]\n",
+        "    skills = [\"deeper_understanding\",\"task_decomposition\",\"fewshot_prompting\"]\n",
         "    integrated_templates = \"[Prompt Engineering Techniques to Apply]\\n\"\n",
         "\n",
         "    for idx, skill in enumerate(skills):\n",
@@ -892,7 +892,7 @@
         "id": "sNydXxQ2S8Wz",
         "outputId": "1af0a7c2-f4ef-42f8-e0f7-8d6df4b6f856"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -914,7 +914,8 @@
             "found 2 \u001b[93mmoderate\u001b[0m severity vulnerabilities\n",
             "  run `npm audit fix` to fix them, or `npm audit` for details\n",
             "\u001b[K\u001b[?25hnpx: installed 22 in 1.28s\n",
-            "your url is: https://flat-comics-boil.loca.lt\n"
+            "your url is: https://flat-comics-boil.loca.lt\n",
+            "^C\n"
           ]
         }
       ]
