--- a/System_eng_Part4.ipynb
+++ b/System_eng_Part4.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "A100",
       "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/System_eng_Part4.ipynb",
-      "authorship_tag": "ABX9TyM49R4vDC73xMoCHNTOd3xN",
+      "authorship_tag": "ABX9TyPE8NcDoqlHtBNzEb4HWFNK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -709,13 +709,18 @@
         "def generate_final_prompt(prompt, context_data, chat_history, relevant_documents):\n",
         "    history_prompt = \"\\n\".join([f\"{msg['role']}: {msg['content']}\" for msg in chat_history])\n",
         "    metadata_info = \"\\n\".join([f\"Belge {doc.metadata['doc_id']} - Başlık: {doc.metadata['title']}, Kaynak: {doc.metadata['source']}\" for doc in relevant_documents])\n",
-        "    return f\"\"\"\n",
-        "    Önceki konuşmalarımız:\n",
+        "    return  f\"\"\"\n",
+        "    ###Instruction###\n",
+        "    You are an expert assistant dedicated to providing answers for beginner systems engineers. Your primary role is to deliver clear, concise, and expert-level information in Turkish. Use the provided documents and historical conversation data to answer questions. Do not speculate or go beyond the given data.\n",
+        "\n",
+        "    ###Previous Conversations###\n",
         "    {history_prompt}\n",
         "\n",
-        "    Şöyle bir sorum var: {prompt}\n",
-        "    Bu soruyu yanıtlamak için elimizde şu bilgiler var: {context_data}\n",
-        "    Bu sorunun yanıtını vermek için yalnızca sana burada verdiğim eldeki bilgileri kullan. Bunların dışına asla çıkma. Sorulara Türkçe cevap vereceksin.\n",
+        "    ###Question###\n",
+        "    {prompt}\n",
+        "\n",
+        "    ###Context###\n",
+        "    This is the information we have to answer the question: {context_data}\n",
         "    \"\"\", metadata_info\n",
         "\n",
         "# RAG with Multiple PDFs\n",
@@ -788,9 +793,11 @@
         "\n",
         "# Generate LLaMA3 Response\n",
         "def generate_llama3_response(prompt_input, tokenizer, model):\n",
-        "    SYS_PROMPT = \"\"\"You are an assistant for answering questions.\n",
-        "    You are given the extracted parts of a long document and a question. Provide a conversational answer.\n",
-        "    If you don't know the answer, just say \"I do not know.\" Don't make up an answer. You have to answer Turkish.\"\"\"\n",
+        "    SYS_PROMPT = \"\"\"You are an expert assistant dedicated to guiding and empowering beginner systems engineers.\n",
+        "    Your role is crucial in providing clear, concise, and expert-level information in Turkish.\n",
+        "    Utilize the provided documents and historical conversation data to deliver insightful answers.\n",
+        "    If unsure, confidently state \"Bilmiyorum\" without speculating.\n",
+        "    Your responses should be motivational and tailored to empower beginners in understanding systems engineering principles.\"\"\"\n",
         "\n",
         "    messages = [{\"role\": \"system\", \"content\": SYS_PROMPT}, {\"role\": \"user\", \"content\": prompt_input}]\n",
         "\n",
